objects/Quota__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <inlineHelpText>Please select value only if you want to add $ in this Quota type amounts.</inlineHelpText>
        <label>Currency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Field is used to track products provided by business</description>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Task Force</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Role__c</fullName>
        <description>Role defined in Salesforce on User detail.</description>
        <label>SF Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quota Type</label>
    <nameField>
        <label>Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quota Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_Type__c</columns>
        <columns>Role__c</columns>
        <columns>Product__c</columns>
        <columns>SF_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>